import "logic2world_msg_type.proto";
import "msg_info_def.proto";
import "msg_info_def_ex.proto";  //@add by Hunter 2017/07/20;
import "msg_type_def.proto";
import "pump_type.proto";

package logic2world_protocols;

//游戏核心加载完毕 向world注册
message packetl2w_game_ready {
	optional e_server_msg_type packet_id = 1 [default = e_mst_l2w_game_ready];		
	optional fixed32 game_id = 2;	//游戏id
	optional fixed32 game_ver = 3;	//游戏版本
	optional fixed32 room_id = 4;   //@当前房间ID,一个房间可以对应多个childID;
	optional fixed32 roomChildID = 5;   //@房间childID,对应同一个房间ID下面有多个子房间对用户及客户端透明;
	optional fixed32 maxPlayerNum = 6 [default = 200];  //@单房间最大人数;
}


//玩家登陆
message packetw2l_player_login {
	optional e_server_msg_type packet_id = 1 [default = e_mst_w2l_player_login];		
	optional fixed32 sessionid = 2;
	optional msg_info_def.msg_account_info account_info = 3;	//账号信息
	optional msg_info_def_ex.msg_account_info_ex account_info_ex = 4;	//扩展信息	
}

message packetl2w_player_login_result {
	optional e_server_msg_type packet_id = 1 [default = e_mst_l2w_player_login_result];		
	optional fixed32 playerid = 2;
	optional msg_type_def.e_msg_result_def result = 3 [default = e_rmt_fail];
}

//玩家退出
message packetw2l_player_logout {
	optional e_server_msg_type packet_id = 1 [default = e_mst_w2l_player_logout];	
	optional fixed32 playerid = 2;
}

//@踢玩家下线消息;
message packetw2l_kick_player {
	optional e_server_msg_type packet_id = 1 [default = e_msg_w2l_kick_player];	
	optional fixed32 playerid = 2;
	optional fixed32 opType =3 [default = 0];       //@离开原因, bforce =0 ,玩家正常离开；bforce =1,当前游戏局结束将其提出房间,需要调用正常写分流程;bforce =2,立马踢出,游戏按逃跑处理;
}

//@逻辑服务请求清理用户;
message packetl2w_req_leave_game {
	optional e_server_msg_type packet_id = 1 [default = e_msg_l2w_req_leave_game];	
	optional fixed32 playerid = 2;
}

//@world广播关闭服务消息;
//@broadcast message to all logic;
message packetw2l_gmPlatformOpt {
	optional e_server_msg_type packet_id = 1 [default =e_msg_w2l_service_fake_opt ];
	optional fixed32 gameID =2;
	optional fixed32 roomID = 3;
	optional fixed32 opType = 4;					//@ opType = 10，杀分;opType = 100,关服务器;
	optional fixed32 cutRound = 5;					//@杀分系数;
	optional fixed32 exInfo = 6; 					 //@留下扩展;
	optional fixed32 exInfo2 = 7; 					 //@留下扩展;
}
 
message packetl2w_player_logout_result {
	optional e_server_msg_type packet_id = 1 [default = e_mst_l2w_player_logout_result];		
	optional fixed32 playerid = 2;
}

// 通知改变玩家属性(双向) world <->logic
message packetw2l_change_player_property
{
	optional e_server_msg_type packet_id = 1 [default = e_mst_w2l_change_player_property];	
	optional fixed32 playerid = 2;

	optional msg_info_def.msg_account_info change_info = 3; //改变的信息
	optional msg_info_def_ex.msg_account_info_ex change_info_ex = 4;	//扩展信息
}

// 统计金币，礼券变化的协议, logic->world
message packetl2w_player_property_stat
{
	optional e_server_msg_type packet_id = 1 [default = e_mst_l2w_player_property_stat];	

	// 玩家ID
	optional fixed32 playerId = 2;

	// 所在游戏
	optional fixed32 gameId = 3;

	// 哪个属性，金币或礼券 e_item_type_def定义
	optional msg_type_def.e_item_type_def attrType = 4;

	// 变化量
	optional int32 addValue = 5;

	// 变化原因
	optional PropertyReasonType reason = 6;

	// 额外参数
	optional string param = 7;
}

// 接收到礼物
message packetw2l_accept_gift
{
	optional e_server_msg_type packet_id = 1 [default = e_mst_w2l_accept_gift];	

	optional int32 senderId = 2;

	optional int32 receiverId = 3;

	optional int32 giftId = 4;
}


// 广播游戏消息
message packetl2w_game_broadcast
{
	optional e_server_msg_type packet_id = 1 [default = e_mst_l2w_game_broadcast];	

	optional string game_msg = 2;
}

//任务成就改变
message packetl2w_player_quest_change
{
	optional e_server_msg_type packet_id = 1 [default = e_mst_l2w_player_quest_change];	

	optional fixed32 player_id = 2;

	optional fixed32 quest_id = 3;	//任务成就ID

	optional fixed32 q_count = 4 [default = 1];	//数量

	optional fixed32 ex_param = 5 [default = 0] ; //扩展参数
}

//玩家星星系统数据改变
message packetl2w_player_star_change
{
	optional e_server_msg_type packet_id = 1 [default = e_mst_l2w_player_star_change];	

	optional fixed32 player_id = 2;

	optional fixed32 addstar = 3 [default = 0];	//获得星星

	optional fixed32 addaward = 4 [default = 0];	//获得奖金
}

//@add  by Hunter 2017/08/26;
//@玩家状态改变通知world,用于一些状态操作;
message  packagel2w_p_game_status_change
{
	optional e_server_msg_type packet_id = 1 [default = e_msg_12w_p_game_status_change];
	optional fixed32 	player_id =2;
	optional fixed32    game_id =3;
	optional fixed32    room_id =4;
	optional fixed32 	table_id =5;
	optional fixed32 	chair_id =6;	   
	optional fixed32 	user_status =7;	  //@用户游戏中状态状态;
}
